fix overflow styling on long item description

--- a/invoice/static/sass/components/_style.scss
+++ b/invoice/static/sass/components/_style.scss
@@ -212,3 +212,7 @@ td {
 ._height_100 {
   height: 100% !important;
 }
+
+._width_70 {
+  width: 70% !important;
+}
